[BUGFIX] Lists inside modal footers should be left-aligned
This is needed for example in TYPO3.Expose on the "delete" confirmation
screen.

Original-Commit-Hash: 0f26ec233f1492c44ee59ad3f32120b1c6d586b9

--- a/TYPO3.Neos/Resources/Public/StyleSheet/_stdHtmlStyles.scss
+++ b/TYPO3.Neos/Resources/Public/StyleSheet/_stdHtmlStyles.scss
@@ -116,6 +116,9 @@
 		@include border-bottom-radius(4px);
 		@include box-shadow(0px -1px 5px rgba($darkest, 0.2), 0px -1px 0px #666);
 		margin-bottom: 0px;
+		li {
+			text-align:left;
+		}
 	}
 }
 
